# bibchecker

./: .gitignore  MANIFEST.in  README  README.md  bibchecker.py  default.nix  doit.py  flake.nix  pyproject.toml  setup.cfg  setup.py  shell.nix
bibchecker/: __init__.py  base.py  cli.py  database.py  filters.py  input.py  output.py  webapp.py
bibchecker/parsers/: __init__.py  remseck.py  stuttgart.py
bibchecker/templates/: dashboard.html  report_base.html  report_bib.html  report_index.html  report_item.html
